# nexus_drf_ui

./: CMakeLists.txt  vcpkg.json
include/: drf_client.hpp  globals.hpp  settings.hpp
src/: drf_client.cpp  globals.cpp  gui.cpp  main.cpp  settings.cpp
